@@ -1,1 +1,1 @@
-yahoo
+default
